--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <hr size ="23" noshade>
 <b> hola proyecto corriculum </b>
 
-<u> DATOS PERSONALES </u>
-<i> Jose Chepo de laTorre Cruz Navjas </i>
+<u> DATOS PERSONALES </u><br>
+<i> Jose Chepo de laTorre Cruz Navjas </i><br>
 <hr size ="23" >
 </body>
 </html>
