--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<html>
-<head>
-<title> NUevo laboratorio, cansan las gradas</title>
+<html><head><title>Informacion personal</title>
 </head>
-<body>
-<br>
-<hr size ="23" noshade>
-<b> hola proyecto corriculum </b>
+<body bgcolor="#E8E035">
+<h1> Informacion personal </h1><br>
+Nombre: Adam Adonias<br>
+Apellido:Paz Lemus<br>
+Grado:4to<br>
+Fecha de nacimiento:2/11/2007<br>
+Correo electronico:adanadoniaspaz@gmail.com<br>
+<img src="foto.jpeg">
+<h1> Mis estudios </h1><br>
+1.Pre primaria Guardia de honor<br>
 
-<u> DATOS PERSONALES </u><br>
-<i> Jose Chepo de laTorre Cruz Navjas </i><br>
-<hr size ="23" >
+2.Primaria Guardia de honor<br>
+
+3.Basicos INEB Villa nueva<br>
+
+4.Diversificado IPC Villa nueva<br>
+
+5. Adicionales
+<p>Estudie mecanografia
+   Cumputacion
+ 
 </body>
 </html>
