--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head><title>Informacion personal</title>
 </head>
 <body bgcolor="#E8E035">
-<h1> Informacion personal </h1><br>
+<h1>Curriculum</h1><br>
 Nombre: Adam Adonias<br>
 Apellido:Paz Lemus<br>
 Grado:4to<br>
