--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
-<html><head><title>Informacion personal</title>
+<!DOCTYPE html>
+   <html lang= "en">
+      <head><title>Informacion personal</title>
 </head>
 <body bgcolor="#E8E035">
 <h1>Curriculum</h1><br>
+   <hr size="30" color= "blue" align= "left">
+   <table>
+      <tr>
+         <th>month</th>
+         <th>Savings</th>
+      </tr>
+      <tr>
+      <td>Junary</td>
+      <td>$100</td>
+      </tr>
+      <tr>
+         <td>Februry</td>
+         <td>$80</td>
+      </tr>
+   </table>
 Nombre: Adam Adonias<br>
 Apellido:Paz Lemus<br>
 Grado:4to<br>
