--- a/index.html
+++ b/index.html
@@ -5,19 +5,31 @@
 <body bgcolor="#E8E035">
 <h1>Curriculum</h1><br>
    <hr size="30" color= "blue" align= "left">
-   <table>
+ <table border="1">
+    <table border="1" cellpadding="0" cellspacing="0" width="50%">
       <tr>
-         <th>month</th>
-         <th>Savings</th>
+         <th>Name</th>
+         <th>Ages</th>
+      <td>Country</td>
+         <td>
+            <img src="foto.jpeg">
+         </td>
       </tr>
       <tr>
-      <td>Junary</td>
-      <td>$100</td>
-      </tr>
-      <tr>
-         <td>Februry</td>
-         <td>$80</td>
-      </tr>
+         <td>Harry</td>
+         <td>28</td>
+         <td>Itain</td>
+</tr>
+     <tr>
+     <td>Jonh Smith</td>
+      <td> 35</td>
+     <td>USA</td>
+     </tr>
+ <tr>
+      <td>Ram Krishan</td>
+      <td>19</td>
+      <td>Nepal</td>
+</tr>
    </table>
 Nombre: Adam Adonias<br>
 Apellido:Paz Lemus<br>
